--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # PostgreSQL
-POSTGRES_PASSWORD=mysecretpass
-POSTGRES_USER=postgresuser
+POSTGRES_PASSWORD=C0nnectDb
+POSTGRES_USER=crewoouser
 
 # General settings
 DJANGO_ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
-DJANGO_SECRET_KEY=qgl87(1#5opi3fmz9lli1!85cmihmm94q^i+o#9gtg6d0c0@kl
+DJANGO_SECRET_KEY=14x42n^8-1-di(=eyw3rdt#e*&!+=1u)(%o#(td4kn%z2lnyd_
 DJANGO_ALLOWED_HOSTS=.crewoo.com
 
 # AWS Settings
@@ -22,10 +22,3 @@ DJANGO_SECURE_SSL_REDIRECT=False
 
 # django-allauth
 DJANGO_ACCOUNT_ALLOW_REGISTRATION=True
-# Sentry
-DJANGO_SENTRY_DSN=
-
-DJANGO_OPBEAT_ORGANIZATION_ID
-DJANGO_OPBEAT_APP_ID
-DJANGO_OPBEAT_SECRET_TOKEN
-
